--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	</head>
 	<body onload = "start()">
    <!--set the top half of the page image-->
-<a><img src = 'Images/Screenshot 2024-01-25 210457.png', id = 'topHalfOfPage', height="45%", width="95%"></a>
-<a href="https://www.pig.org/donate"><img src = 'Images/bottomHalf.png', id = 'bottomHalfOfPage', height = '45%', width = '95%'></a>
+<a><img src = 'MotherWebsite/Images/Screenshot 2024-01-25 210457.png', id = 'topHalfOfPage', height="45%", width="95%"></a>
+<a href="https://www.pig.org/donate"><img src = 'MotherWebsite/Images/bottomHalf.png', id = 'bottomHalfOfPage', height = '45%', width = '95%'></a>
     
 <!--
 			<img src="https://piskel-imgstore-b.appspot.com/img/dad54047-2126-11ee-be03-114e5a0b36dc.gif"  alt = "$2" id="center0" style="bottom: 230; right: 15; position: fixed"/>
